2008-10-24  Jan Schmidt  <jan.schmidt@sun.com>

	* src/htdocs/entities.gst:
	* src/htdocs/releases/gst-plugins-bad/0.10.9.xml:
	* src/htdocs/releases/gst-plugins-bad/Makefile.am:
	* src/htdocs/releases/gst-plugins-good/0.10.11.xml:
	* src/htdocs/releases/gst-plugins-good/Makefile.am:
	Release 0.10.11 of Good and 0.10.9 of Bad

2008-10-03  Jan Schmidt  <jan.schmidt@sun.com>

	* src/htdocs/news/news.xml:
	Fix news item title

2008-10-03  Jan Schmidt  <jan.schmidt@sun.com>

	* src/htdocs/entities.site.gnl:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-plugins-base/0.10.21.xml:
	* src/htdocs/releases/gst-plugins-base/Makefile.am:
	* src/htdocs/releases/gst-python/0.10.13.xml:
	* src/htdocs/releases/gst-python/Makefile.am:
	* src/htdocs/releases/gstreamer/0.10.21.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:

	Release GStreamer 0.10.21, Base 0.10.21 and Python 0.10.13

2008-09-03  Edward Hervey  <edward.hervey@collabora.co.uk>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-ffmpeg/0.10.5.xml:
	* src/htdocs/releases/gst-ffmpeg/Makefile.am:
	Release gst-ffmpeg 0.10.5

2008-08-27  Jan Schmidt  <jan.schmidt@sun.com>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-plugins-good/0.10.10.xml:
	* src/htdocs/releases/gst-plugins-good/Makefile.am:
	* src/htdocs/releases/gst-plugins-ugly/0.10.9.xml:
	* src/htdocs/releases/gst-plugins-ugly/Makefile.am:
	Release Good 0.10.10 and Ugly 0.10.9

2008-07-31  Jan Schmidt  <jan.schmidt@sun.com>

	* src/htdocs/news/news.xml:
	Grrr - correct the date on the news item

2008-07-31  Jan Schmidt  <jan.schmidt@sun.com>

	* src/htdocs/news/news.xml:
	Add news item for new releases

2008-07-31  Jan Schmidt  <jan.schmidt@sun.com>

	* src/htdocs/entities.gst:
	* src/htdocs/releases/gst-plugins-bad/0.10.8.xml:
	* src/htdocs/releases/gst-plugins-bad/Makefile.am:
	* src/htdocs/releases/gst-plugins-good/0.10.9.xml:
	* src/htdocs/releases/gst-plugins-good/Makefile.am: