@@ -3187,4 +3187,20 @@ or download tarballs for
     </content>
   </item>
 
+  <item>
+    <date>2008-11-03 17:10</date>
+    <title>GNonLin 0.10.10 release</title>
+    <content>
+<p>
+The GStreamer team is proud to announce a new release in the 0.10.x stable
+series of GNonLin.
+</p>
+<p>
+Check out release notes for
+<a href="&site;/releases/gnonlin/0.10.10.html">gnonlin</a>,
+or download tarballs for
+<a href="&site;/src/gnonlin/gnonlin-0.10.10.tar.bz2">gnonlin</a>.
+</p>
+    </content>
+  </item>
 </news>
