@@ -1,3 +1,11 @@
+2008-11-03  Edward Hervey  <edward.hervey@collabora.co.uk>
+
+	* src/htdocs/entities.gst:
+	* src/htdocs/news/news.xml:
+	* src/htdocs/releases/gnonlin/0.10.10.xml:
+	* src/htdocs/releases/gnonlin/Makefile.am:
+	Releasing 0.10.10 of GNonLin
+
 2008-10-24  Jan Schmidt  <jan.schmidt@sun.com>
 
 	* src/htdocs/entities.gst:
